Improve the generated open-api docs
