# downstream/src/main/kotlin/com/example/connect/downstream/GetMovieDetailsController.kt
@@ -1,5 +1,6 @@
 package com.example.connect.downstream
 
+import io.swagger.v3.oas.annotations.Operation
 import org.springframework.http.HttpStatus.NOT_FOUND
 import org.springframework.web.bind.annotation.*
 import java.time.Year
@@ -9,6 +10,7 @@ class GetMovieDetailsController(
     private val movieCatalogue: MovieCatalogue
 ) {
 
+    @Operation(summary = "Get movie details", operationId = "movieDetails")
     @GetMapping("/movies/{title}")
     fun handle(@PathVariable title: String): Any {
         return movieCatalogue.findByTitle(title)
