# downstream/src/main/kotlin/com/example/connect/downstream/ListMoviesController.kt
@@ -1,13 +1,15 @@
 package com.example.connect.downstream
 
+import io.swagger.v3.oas.annotations.Operation
 import org.springframework.web.bind.annotation.GetMapping
 import org.springframework.web.bind.annotation.RestController
 
 @RestController
-class FindMoviesController(
+class ListMoviesController(
     private val movieCatalogue: MovieCatalogue
 ) {
 
+    @Operation(summary = "List movies", operationId = "listMovies")
     @GetMapping("/movies")
     fun handle(): Any {
         return Response(
